// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oauth2 introspect 1`] = `
{
  "formData": {
    "include": "session_info,identity_set",
    "token": "abc-def-ghi",
  },
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "53",
    "content-type": "application/x-www-form-urlencoded; charset=UTF-8",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/oauth2/token/introspect",
}
`;

exports[`oauth2 revoke 1`] = `
{
  "formData": {
    "token": "abc-def-ghi",
  },
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "17",
    "content-type": "application/x-www-form-urlencoded; charset=UTF-8",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/oauth2/token/revoke",
}
`;

exports[`oauth2 validate 1`] = `
{
  "formData": {
    "client_id": "my-client-id",
    "token": "abc-def-ghi",
  },
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "40",
    "content-type": "application/x-www-form-urlencoded; charset=UTF-8",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/oauth2/token/validate",
}
`;
